<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_laundry_day"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_laundry_day" />
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/account" />
        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/order_history" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/provider_menu">
        <menu>
        <item
            android:id="@+id/open_instance_board"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/open_order_instances" />
        <item
            android:id="@+id/manual"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/manual" />
        <item
            android:id="@+id/provider_schedule"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/schedule" />
        <item
            android:id="@+id/provider_support"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/provider_support" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/help" />


            <item
                android:id="@+id/provider_sign_up"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/provider" />

        </menu>
    </item>

</menu>
